The remove icons in the entry asset manager were not aligned properly in IE 6 and 7. This adds hacks for those two browsers. BugId: 101230

--- a/mt-static/css/hacks/ie.css
+++ b/mt-static/css/hacks/ie.css
@@ -103,3 +103,6 @@ button.big-button {
     margin-bottom: 0;
 }
 
+ul#asset-list li a.remove-asset {
+	top: -4px;
+}
